--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>1.4.200</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
